Start timetable generation rework, still not fully working